# trakt-cli

./: Cargo.toml  README.md  SKILL.md
src/: api.rs  auth.rs  client.rs  commands.rs  config.rs  dispatch.rs  main.rs  pagination.rs
