[package]
name = "trakt-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "http2", "macos-system-configuration", "json", "gzip", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
tokio = { version = "1", features = ["full"] }
directories = "5.0"
anyhow = "1.0"
thiserror = "1.0"
